--- a/package.json
+++ b/package.json
@@ -9,12 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.1",
+    "@celo-tools/use-contractkit": "^1.2.0",
+    "@celo/contractkit": "^1.3.0",
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.0.4",
+    "@mui/styles": "^5.0.1",
+    "big.js": "^5.2.2",
+    "bignumber.js": "^9.0.1",
+    "classnames": "^2.2.6",
+    "clsx": "^1.1.1",
+    "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-countup": "^6.0.0",
+    "react-dom": "17.0.2",
+    "web3": "^1.3.6"
   },
   "devDependencies": {
+    "@openzeppelin/contracts": "^4.3.2",
+    "@types/node": "^16.11.1",
+    "@types/react": "^17.0.30",
     "eslint": "7.32.0",
-    "eslint-config-next": "12.0.1"
+    "eslint-config-next": "11.1.2",
+    "eslint-plugin-react": "^7.26.1",
+    "typescript": "^4.4.4"
   }
 }
