--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "@openzeppelin/contracts": "^4.3.2",
     "@types/node": "^16.11.1",
     "@types/react": "^17.0.30",
+    "css-loader": "^6.5.0",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "eslint-plugin-react": "^7.26.1",
+    "style-loader": "^3.3.1",
     "typescript": "^4.4.4"
   }
 }
